--- a/README
+++ b/README
@@ -71,6 +71,12 @@ Contributions are welcome! If you'd like to contribute to this project, please f
 5. Push to the branch (`git push origin feature/my-feature`).
 6. Create a new pull request.
 
+## License
 
+This project is licensed under the [MIT License](LICENSE).
 
+## Acknowledgements
+
+- This project was inspired by the need for a simple and lightweight image carousel solution.
+- Special thanks to [tasnimlima07](https://github.com/tasnimlima07) for creating and sharing this image carousel.
 
