--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-# Image Carousel
-This is a simple image carousel built using HTML, CSS, and JavaScript. It allows users to view a collection of images in a carousel format with navigation buttons to move between images.
 
-
+## Demo
+You can see a live demo of the image carousel [here](https://tasnimlima07.github.io/image_carousel/).
