--- a/README
+++ b/README
@@ -1,2 +1,46 @@
-## Demo
-You can see a live demo of the image carousel [here](https://tasnimlima07.github.io/image_carousel/).
+## Image Carousel
+Welcome to the Image Carousel project! This repository contains a simple image carousel component built with React, aimed at displaying a collection of images in a slideshow format.
+
+Project Overview
+The Image Carousel project provides a straightforward implementation of an image carousel component, allowing users to cycle through a set of images with navigation controls.
+
+Features
+Image Slideshow: Display a collection of images in a slideshow format.
+Navigation Controls: Navigate between images using previous and next buttons.
+Auto-Play Mode: Optionally enable auto-play mode to automatically cycle through images.
+Getting Started
+To use the Image Carousel component in your project, follow these steps:
+
+Clone this repository to your local machine.
+Navigate to the src folder within the repository.
+Copy the ImageCarousel.js file into your project's source code.
+Import the ImageCarousel component into your React application.
+Pass an array of image URLs as props to the ImageCarousel component to display the images.
+javascript
+Copy code
+import React from 'react';
+import ImageCarousel from './ImageCarousel';
+
+function App() {
+  const images = [
+    'https://example.com/image1.jpg',
+    'https://example.com/image2.jpg',
+    'https://example.com/image3.jpg',
+  ];
+
+  return (
+    <div className="App">
+      <ImageCarousel images={images} />
+    </div>
+  );
+}
+
+export default App;
+Customization
+The Image Carousel component is highly customizable. You can adjust the appearance and behavior of the carousel by modifying the component's props, such as transition duration, auto-play interval, and navigation button styles.
+
+Example
+Check out the example folder in this repository for a simple React application that demonstrates how to use the Image Carousel component.
+
+License
+This project is licensed under the MIT License.
